# TraigentSchema

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  Makefile  NOTICE  README.md  WORKER_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.local.properties  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: auth-taxonomy-parity.yml  ci.yml  codeql.yml  parity-check.yml  publish.yml  sonarcloud.yml  sonarqube-local.yml  spine-core.yml  spine-session-link.yml  spine-trail-gate.yml  validation-g8-dispatch.yml  validation-spine-pr.yml
.github/workflows.disabled/: sonarcloud.yml
docs/: LOCAL_CI_GATE.md
hooks/: pre-push
parity/: python-js-sdk.json
reports/: agent-tuning-history-schema-result.md
scripts/: local_gate.sh  refresh_parity.py
tests/: __init__.py  _charban.py  test_admin_onboarding_contract.py  test_agent_lifecycle_schemas.py  test_analytics_schemas.py  test_analytics_validators.py  test_api_key_authorization_vocabulary.py  test_audit_alerts.py  test_audit_health.py  test_audit_logs_compliance.py  test_audit_retention_policies.py  test_audit_security_incidents.py  test_audit_statistics.py  test_auth_interaction_policy_contracts.py  test_auth_mfa_request_contracts.py  test_auth_onboarding_identity_contracts.py  test_auth_response_schemas.py  test_auth_role_vocabulary.py  test_auth_taxonomy_parity.py  test_best_config_contract_closure.py  test_billing_contract_completeness.py  test_billing_error_schemas.py  test_billing_quota_contracts.py  test_certified_selection_schema.py  test_ci_and_readme_hygiene.py  test_ci_workflow_contract.py  test_content_privacy_annotations.py  test_contract_completeness_docs.py  test_cost_response_schemas.py  test_create_request_contracts.py  test_dataset_create_config_drift.py  test_datasets_contract.py  test_device_auth_schemas.py  test_double_array_deprecation.py  test_economics_telemetry_contract.py  test_endpoint_catalog_completeness.py  test_endpoint_catalog_registration.py  test_endpoint_reference_integrity.py  test_error_envelope_schema.py  test_evaluation_set_splits_schema.py  (+46 more)
tests/data/: auth_taxonomy_known_drift.yaml  auth_taxonomy_surfaces.json  x_extensions_registry.json
tests/test_data/analytics/: dataset_quality_valid.json  decision_payload_valid.json  example_score_invalid.json  example_score_minimal.json  example_score_valid.json  run_correlations_valid.json  run_example_insights_valid.json  run_leaderboard_valid.json  run_parameter_insights_valid.json  run_pareto_valid.json  scoring_job_status_completed.json  scoring_job_status_failed.json  scoring_job_status_running.json
tests/test_data/guidance/: guidance_plan_request_valid.json  guidance_plan_valid.json  guidance_result_submission_valid.json
traigent_schema/: __init__.py  analytics_validators.py  utils.py  validator.py  version.py
traigent_schema/schemas/: common_types_schema.json  error_envelope_schema.json  harness_session_record.json  mep.json  mep_endpoints.json  offset_pagination_schema.json  pagination_schema.json  planned_projects_endpoints.json  rate_limit_info_schema.json  sdk_tuning_endpoints.json  status_schema.json  success_envelope_schema.json  task_outcome.json  validation_error_schema.json  x_extensions_meta_schema.json
traigent_schema/schemas/agents/: agent_create_request_schema.json  agent_deployment_schema.json  agent_response_schema.json  agent_schema.json  agent_types_schema.json  agents_endpoints.json  model_parameters_create_request_schema.json  model_parameters_schema.json  model_schema.json  retriever_create_request_schema.json  retriever_schema.json
traigent_schema/schemas/analytics/: analytics_endpoints.json  artifact_lifecycle_schema.json  curation_advice_schema.json  dataset_quality_schema.json  decision_payload_response_schema.json  decision_payload_schema.json  example_score_schema.json  next_steps_receipt_request_schema.json  next_steps_receipt_response_schema.json  next_steps_schema.json  privacy_mode_schema.json  run_correlations_response_schema.json  run_correlations_schema.json  run_example_insights_response_schema.json  run_example_insights_schema.json  run_leaderboard_response_schema.json  run_leaderboard_schema.json  run_parameter_insights_response_schema.json  run_parameter_insights_schema.json  run_pareto_response_schema.json  run_pareto_schema.json  run_report_response_schema.json  (+1 more)
(+334 files in other folders)
